--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <div class="bg-white bg-opacity-80 backdrop-blur-md rounded-xl shadow-2xl p-8 max-w-xl w-full text-center transform transition-all duration-500 scale-100" id="app-container">
 
         <h1 class="text-4xl md:text-5xl font-cursive text-red-600 mb-6">FLAMES</h1>
-        <p class="text-gray-700 mb-8 text-lg">Find out your relationship compatibility!</p>
+        <p class="text-gray-700 mb-2 text-lg">Find out your relationship compatibility!</p>
+        <p class="text-gray-700 mb-8 text-lg">Dedicated to Adunni ♥</p>
 
         <div class="space-y-6 mb-8">
             <div>
